[gd_scene load_steps=28 format=3 uid="uid://s0vsemqwnofk"]

[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://shader/2d_outline_shader.tres" id="1_7yi67"]
[ext_resource type="Script" path="res://character/ghost/scene/ghost_niu_tou.gd" id="1_kc5ne"]
[ext_resource type="Texture2D" uid="uid://bqtyt64xfdwrf" path="res://asset/character/captain_clown_nose/with_sword/15-Attack 1/Attack 1 01.png" id="2_f3hx8"]
[ext_resource type="Texture2D" uid="uid://2wf3foq6xgi4" path="res://asset/character/captain_clown_nose/with_sword/15-Attack 1/Attack 1 02.png" id="3_ffai1"]
[ext_resource type="Texture2D" uid="uid://do7ppf7g0hy0o" path="res://asset/character/captain_clown_nose/with_sword/15-Attack 1/Attack 1 03.png" id="4_fjtl8"]
[ext_resource type="Texture2D" uid="uid://bwpjdhl3y5yti" path="res://asset/character/captain_clown_nose/with_sword/14-Hit Sword/Hit Sword 01.png" id="5_gnr5s"]
[ext_resource type="Texture2D" uid="uid://dfr04jni0egnw" path="res://asset/character/captain_clown_nose/with_sword/14-Hit Sword/Hit Sword 02.png" id="6_nrvph"]
[ext_resource type="Texture2D" uid="uid://dx548d07nmtw5" path="res://asset/character/captain_clown_nose/with_sword/14-Hit Sword/Hit Sword 03.png" id="7_rvqxu"]
[ext_resource type="Texture2D" uid="uid://cnt5l3422uk3o" path="res://asset/character/captain_clown_nose/with_sword/14-Hit Sword/Hit Sword 04.png" id="8_kt084"]
[ext_resource type="Texture2D" uid="uid://bnqlrya7tysd" path="res://asset/character/captain_clown_nose/with_sword/09-Idle Sword/Idle Sword 01.png" id="9_wrdxd"]
[ext_resource type="Texture2D" uid="uid://dqd0b6y7vjtlp" path="res://asset/character/captain_clown_nose/with_sword/09-Idle Sword/Idle Sword 02.png" id="10_uudu8"]
[ext_resource type="Texture2D" uid="uid://csrbg2nvvbtsn" path="res://asset/character/captain_clown_nose/with_sword/09-Idle Sword/Idle Sword 03.png" id="11_sr81d"]
[ext_resource type="Texture2D" uid="uid://dajd2nfceq7u3" path="res://asset/character/captain_clown_nose/with_sword/09-Idle Sword/Idle Sword 04.png" id="12_g33sn"]
[ext_resource type="Texture2D" uid="uid://c3uoxl1wc03me" path="res://asset/character/captain_clown_nose/with_sword/09-Idle Sword/Idle Sword 05.png" id="13_72qch"]
[ext_resource type="Script" path="res://utils/OutlineHighlighter.gd" id="14_32lh5"]
[ext_resource type="Script" path="res://character/state_machine/state_machine.gd" id="15_r27ei"]
[ext_resource type="Script" path="res://character/states/ghost_in.gd" id="16_ou5io"]
[ext_resource type="Script" path="res://character/states/ghost_hit.gd" id="17_5mtai"]
[ext_resource type="Script" path="res://character/states/ghost_idle.gd" id="18_tthr6"]
[ext_resource type="Script" path="res://character/states/ghost_jump.gd" id="19_0xqg1"]
[ext_resource type="Script" path="res://character/states/ghost_attack.gd" id="20_5lx7y"]
[ext_resource type="Script" path="res://character/stats/stats.gd" id="21_7vg0r"]
[ext_resource type="Script" path="res://character/states/hover.gd" id="22_0k0qr"]
[ext_resource type="Script" path="res://character/states/selected.gd" id="23_r6y5v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33bi0"]
size = Vector2(25, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jc7nc"]
size = Vector2(25, 26)

[sub_resource type="SpriteFrames" id="SpriteFrames_gw831"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_f3hx8")
}, {
"duration": 1.0,
"texture": ExtResource("3_ffai1")
}, {
"duration": 1.0,
"texture": ExtResource("4_fjtl8")
}],
"loop": false,
"name": &"attack",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gnr5s")
}, {
"duration": 1.0,
"texture": ExtResource("6_nrvph")
}, {
"duration": 1.0,
"texture": ExtResource("7_rvqxu")
}, {
"duration": 1.0,
"texture": ExtResource("8_kt084")
}],
"loop": false,
"name": &"hit",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_wrdxd")
}, {
"duration": 1.0,
"texture": ExtResource("10_uudu8")
}, {
"duration": 1.0,
"texture": ExtResource("11_sr81d")
}, {
"duration": 1.0,
"texture": ExtResource("12_g33sn")
}, {
"duration": 1.0,
"texture": ExtResource("13_72qch")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}]

[node name="GhostNiuTou" type="CharacterBody2D" node_paths=PackedStringArray("bubble_marker", "stats", "animation_player", "state_machine") groups=["workers"]]
position = Vector2(491, 248)
script = ExtResource("1_kc5ne")
bubble_marker = NodePath("ChatPosition")
stats = NodePath("Stats")
animation_player = NodePath("CanvasGroup/AnimatedSprite2D")
state_machine = NodePath("StateMachine")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_33bi0")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(5, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_jc7nc")

[node name="CanvasGroup" type="CanvasGroup" parent="."]
material = ExtResource("1_7yi67")
scale = Vector2(5, 5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CanvasGroup"]
sprite_frames = SubResource("SpriteFrames_gw831")
animation = &"idle"
autoplay = "idle"

[node name="ChatPosition" type="Node2D" parent="."]
position = Vector2(73, -71)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("15_r27ei")
initial_state = NodePath("Idle")

[node name="In" type="Node" parent="StateMachine"]
script = ExtResource("16_ou5io")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("17_5mtai")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("18_tthr6")

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("19_0xqg1")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("20_5lx7y")

[node name="Hover" type="Node" parent="StateMachine"]
script = ExtResource("22_0k0qr")

[node name="Selected" type="Node" parent="StateMachine"]
script = ExtResource("23_r6y5v")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("14_32lh5")
visuals = NodePath("../CanvasGroup")
outline_color = Color(0.298039, 0.988235, 0.988235, 1)
outline_thickness = 1

[node name="Stats" type="Node" parent="."]
script = ExtResource("21_7vg0r")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
